--- a/index.html
+++ b/index.html
@@ -4,38 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <meta name="description"
+        content="Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./resources/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Trafalgar Healthcare</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"><img src="./resources/img/logo.png" alt=""></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Find a doctor</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Apps</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Testimonials</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">About us</a>
-                    </li>
-                </ul>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav ml-auto">
+                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">Find a doctor</a>
+                <a class="nav-link" href="#">Apps</a>
+                <a class="nav-link" href="#">Testimonials</a>
+                <a class="nav-link" href="#">About us</a>
+              </div>
             </div>
         </nav>
     </header>
@@ -64,10 +55,11 @@
             <div class="container">
                 <div class="services_label">
                     <h2>Our services</h2>
-                <hr>
-                <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your
-                    undergo treatment with our highly qualified doctors you can consult with us which type of service is
-                    suitable for your health</p>
+                    <hr>
+                    <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your
+                        undergo treatment with our highly qualified doctors you can consult with us which type of
+                        service is
+                        suitable for your health</p>
                 </div>
                 <div class="row">
                     <div class="col-sm-4">
@@ -103,41 +95,42 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <div class="card shadow services_card">
-                                <img class="card-img-top card_icon_size" src="./resources/img/Frame 4.png"
-                                    alt="Card image cap">
-                                <div class="card-body">
-                                    <h4 class="card-title">Details info</h4>
-                                    <p class="card-text">Free consultation with our trusted doctors and get the best
-                                        recomendations</p>
-                                </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="card shadow services_card">
+                            <img class="card-img-top card_icon_size" src="./resources/img/Frame 4.png"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">Details info</h4>
+                                <p class="card-text">Free consultation with our trusted doctors and get the best
+                                    recomendations</p>
                             </div>
                         </div>
-                        <div class="col-sm-4">
-                            <div class="card shadow services_card">
-                                <img class="card-img-top card_icon_size" src="./resources/img/Frame 5.png"
-                                    alt="Card image cap">
-                                <div class="card-body">
-                                    <h4 class="card-title">Emergency care</h4>
-                                    <p class="card-text">You can get 24/7 urgent care for yourself or your children and
-                                        your lovely family</p>
-                                </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="card shadow services_card">
+                            <img class="card-img-top card_icon_size" src="./resources/img/Frame 5.png"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">Emergency care</h4>
+                                <p class="card-text">You can get 24/7 urgent care for yourself or your children and
+                                    your lovely family</p>
                             </div>
                         </div>
-                        <div class="col-sm-4">
-                            <div class="card shadow services_card">
-                                <img class="card-img-top card_icon_size" src="./resources/img/Frame 6.png"
-                                    alt="Card image cap">
-                                <div class="card-body">
-                                    <h4 class="card-title">Tracking</h4>
-                                    <p class="card-text">Track and save your medical history and health data </p>
-                                </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="card shadow services_card">
+                            <img class="card-img-top card_icon_size" src="./resources/img/Frame 6.png"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">Tracking</h4>
+                                <p class="card-text">Track and save your medical history and health data </p>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
 
         <section>
