--- a/index.html
+++ b/index.html
@@ -7,25 +7,33 @@
     <meta name="description"
         content="Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <title>Trafalgar Healthcare</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+                    <div class="hamburger" id="hamburger-1" onclick="this.classList.toggle('is-active')">
+                        <span class="line"></span>
+                        <span class="line"></span>
+                        <span class="line"></span>
+                    </div>
+                </span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto">
-                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-link" href="#">Find a doctor</a>
-                <a class="nav-link" href="#">Apps</a>
-                <a class="nav-link" href="#">Testimonials</a>
-                <a class="nav-link" href="#">About us</a>
+                <a class="nav-item nav-link text-center px-3 active" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link text-center px-3" href="#">Find a doctor</a>
+                <a class="nav-item nav-link text-center px-3" href="#">Apps</a>
+                <a class="nav-item nav-link text-center px-3" href="#">Testimonials</a>
+                <a class="nav-item nav-link text-center px-3" href="#">About us</a>
               </div>
             </div>
         </nav>
@@ -36,16 +44,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h1>Virtual healthcare
+                        <h1 class="f-bold">Virtual healthcare
                             for you</h1>
                         <p>Trafalgar provides progressive, and affordable
                             healthcare, accessible on mobile and online
                             for everyone</p>
-                        <a class="btn" href="">Consult today</a>
+                        <a class="btn banner-btn" href="">Consult today</a>
                     </div>
                     <div class="col-sm-6">
-                        <img src="./resources/img/trafalgar-header illustration 1.png" class="img-fluid"
-                            alt="Responsive image">
+                        <img src="img/banner illustration.png" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -54,8 +61,8 @@
         <section class="services">
             <div class="container">
                 <div class="services_label">
-                    <h2>Our services</h2>
-                    <hr>
+                    <h2 class="f-bold">Our services</h2>
+                    <div class="h-line mx-auto"></div>
                     <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your
                         undergo treatment with our highly qualified doctors you can consult with us which type of
                         service is
@@ -64,8 +71,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="card shadow services_card">
-                            <img class="card-img-top card_icon_size" src="./resources/img/Frame 1.png"
-                                alt="Card image cap">
+                            <img class="card-img-top card_icon_size" src="img/Frame 1.png">
                             <div class="card-body">
                                 <h4 class="card-title">Search doctor</h4>
                                 <p class="card-text">Choose your doctor from thousands of specialist, general, and
@@ -75,8 +81,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="card shadow services_card">
-                            <img class="card-img-top card_icon_size" src="./resources/img/Frame 2.png"
-                                alt="Card image cap">
+                            <img class="card-img-top card_icon_size" src="img/Frame 2.png">
                             <div class="card-body">
                                 <h4 class="card-title">Online pharmacy</h4>
                                 <p class="card-text">Buy your medicines with our mobile application with a simple
@@ -86,8 +91,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="card shadow services_card">
-                            <img class="card-img-top card_icon_size" src="./resources/img/Frame 3.png"
-                                alt="Card image cap">
+                            <img class="card-img-top card_icon_size" src="img/Frame 3.png">
                             <div class="card-body">
                                 <h4 class="card-title">Consultation</h4>
                                 <p class="card-text">Free consultation with our trusted doctors and get the best
@@ -99,8 +103,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="card shadow services_card">
-                            <img class="card-img-top card_icon_size" src="./resources/img/Frame 4.png"
-                                alt="Card image cap">
+                            <img class="card-img-top card_icon_size" src="img/Frame 4.png">
                             <div class="card-body">
                                 <h4 class="card-title">Details info</h4>
                                 <p class="card-text">Free consultation with our trusted doctors and get the best
@@ -110,8 +113,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="card shadow services_card">
-                            <img class="card-img-top card_icon_size" src="./resources/img/Frame 5.png"
-                                alt="Card image cap">
+                            <img class="card-img-top card_icon_size" src="img/Frame 5.png">
                             <div class="card-body">
                                 <h4 class="card-title">Emergency care</h4>
                                 <p class="card-text">You can get 24/7 urgent care for yourself or your children and
@@ -121,14 +123,14 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="card shadow services_card">
-                            <img class="card-img-top card_icon_size" src="./resources/img/Frame 6.png"
-                                alt="Card image cap">
+                            <img class="card-img-top card_icon_size" src="img/Frame 6.png">
                             <div class="card-body">
                                 <h4 class="card-title">Tracking</h4>
                                 <p class="card-text">Track and save your medical history and health data </p>
                             </div>
                         </div>
                     </div>
+                    <a href="" class="btn custom-btn mx-auto">Learn more</a>
                 </div>
             </div>
         </section>
@@ -138,15 +140,14 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6">
-                            <img src="./resources/img/trafalgar-illustration sec02 1.png" class="img-fluid"
-                                alt="Responsive image">
+                            <img src="img/trafalgar-illustration sec02 1.png" class="img-fluid">
                         </div>
                         <div class="col-sm-6">
                             <h1>Leading healthcare providers</h1>
                             <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and
                                 online for everyone. To us, it’s not just work. We take pride
                                 in the solutions we deliver</p>
-                            <a class="btn" href="">Learn more</a>
+                            <a class="btn custom-btn" href="">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -163,11 +164,10 @@
                             <p>Our dedicated patient engagement app and
                                 web portal allow you to access information instantaneously (no tedeous form, long calls,
                                 or administrative hassle) and securely</p>
-                            <a class="btn" href="">Download</a>
+                            <a class="btn custom-btn" href="">Download</a>
                         </div>
                         <div class="col-sm-6">
-                            <img src="./resources/img/trafalgar-illustration sec03 1.png" class="img-fluid"
-                                alt="Responsive image">
+                            <img src="img/trafalgar-illustration sec03 1.png" class="img-fluid">
                         </div>
                     </div>
                 </div>
@@ -180,7 +180,7 @@
                 <hr>
                 <div>
                     <div>
-                        <img src="./resources/img/Mask Group.png" alt="">
+                        <img src="img/Mask Group.png" alt="">
                         <div>
                             <h4>Edward Newgate</h4>
                             <p>Founder Circle</p>
@@ -202,7 +202,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="card shadow articles_card">
-                            <img class="card-img-top" src="./resources/img/image 1.png" alt="Card image cap">
+                            <img class="card-img-top" src="img/image 1.png" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">Disease detection, check
                                     up in the laboratory</h4>
@@ -215,7 +215,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="card shadow articles_card">
-                            <img class="card-img-top" src="./resources/img/image 2.png" alt="Card image cap">
+                            <img class="card-img-top" src="img/image 2.png" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">Herbal medicines that are
                                     safe for consumption</h4>
@@ -227,7 +227,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="card shadow articles_card">
-                            <img class="card-img-top" src="./resources/img/image 3.png" alt="Card image cap">
+                            <img class="card-img-top" src="img/image 3.png" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">Natural care for healthy
                                     facial skin</h4>
