--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description"
         content="Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
@@ -28,13 +29,14 @@
                 </span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link text-center px-3 active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link text-center px-3" href="#">Find a doctor</a>
-                <a class="nav-item nav-link text-center px-3" href="#">Apps</a>
-                <a class="nav-item nav-link text-center px-3" href="#">Testimonials</a>
-                <a class="nav-item nav-link text-center px-3" href="#">About us</a>
-              </div>
+                <div class="navbar-nav ml-auto">
+                    <a class="nav-item nav-link text-center px-3 active" href="#">Home <span
+                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link text-center px-3" href="#">Find a doctor</a>
+                    <a class="nav-item nav-link text-center px-3" href="#">Apps</a>
+                    <a class="nav-item nav-link text-center px-3" href="#">Testimonials</a>
+                    <a class="nav-item nav-link text-center px-3" href="#">About us</a>
+                </div>
             </div>
         </nav>
     </header>
@@ -176,21 +178,51 @@
 
         <section class="testimonials">
             <div class="container shadow">
-                <h2>What our customers are saying</h2>
-                <hr>
-                <div>
-                    <div>
-                        <img src="img/Mask Group.png" alt="">
-                        <div>
-                            <h4>Edward Newgate</h4>
-                            <p>Founder Circle</p>
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+                        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+                        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="testimonial">
+                                <h2 class="f-bold text-center">What our customers are saying</h2>
+                                <div class="h-lines mx-auto"></div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <img src="img/Mask Group.png" alt="">
+                                        <div>
+                                            <h4>Edward Newgate</h4>
+                                            <p>Founder Circle</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <p>“Our dedicated patient engagement app and
+                                            web portal allow you to access information instantaneously (no tedeous form,
+                                            long calls,
+                                            or administrative hassle) and securely”</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="..." class="d-block w-100" alt="...">
                         </div>
                     </div>
-                    <div>
-                        <p>“Our dedicated patient engagement app and
-                            web portal allow you to access information instantaneously (no tedeous form, long calls,
-                            or administrative hassle) and securely”</p>
-                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </a>
                 </div>
             </div>
         </section>
@@ -240,7 +272,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <a href="">View all</a>
+                    <a href="" class="btn custom-btn">View all</a>
                 </div>
             </div>
         </section>
